# Polar-Median-Lab

./: .flaskenv  .gitignore  README.md  app.py  pyproject.toml
docs/: proposal.md
src/dsa_median/: __init__.py  benchmarks.py  dual_heap.py  filters.py  metrics.py  noise.py  segment_tree.py  sliding_window.py  webapp.py
tests/: test_dual_heap.py  test_filters.py  test_segment_tree.py
web/: app.js  index.html  styles.css
